--- a/grandpy_app/templates/index.html
+++ b/grandpy_app/templates/index.html
@@ -12,7 +12,6 @@
 
     <img src="{{ url_for('static', filename='/img/chatbot.png') }}" alt='grandpy avatar' id='avatar' />
     <h1> GrandPy Bot - your great grand geobot </h1>
-    <!-- <button class="btn-close"><svg viewBox="0 0 47.971 47.971"><path fill="white" d="M28.228 23.986L47.092 5.122a2.998 2.998 0 000-4.242 2.998 2.998 0 00-4.242 0L23.986 19.744 5.121.88a2.998 2.998 0 00-4.242 0 2.998 2.998 0 000 4.242l18.865 18.864L.879 42.85a2.998 2.998 0 104.242 4.241l18.865-18.864L42.85 47.091c.586.586 1.354.879 2.121.879s1.535-.293 2.121-.879a2.998 2.998 0 000-4.242L28.228 23.986z"/></svg></button> -->
   </div>
 
   <div class="messages">
@@ -27,10 +26,9 @@
   <div class="controls">
     <form>
       <input required type="text" id="input field" autofocus name="query" placeholder="Ask GrandPy a question">
-      <input type="submit" id="submit button" value="Ask">
+      <input type="submit" id="submit-button" value="Ask">
     </form>
   </div>
   <footer>Nicolas Cyirenga Bontemps - something@github.com</footer>
-</div>
 </div>
 {% endblock %}
