--- a/grandpy_app/static/css.css
+++ b/grandpy_app/static/css.css
@@ -4,59 +4,60 @@
   --secondary: lightcoral;
   --txt-light: white;
   --background: rgba(255, 255, 255, 0.7);
+
 }
 
 html {
-  box-sizing: border-box; /* removes horizontal scroll bar at bottom */
-  height: 100%;/*  extends window to full vertical */
-  width: 100%; /* ?? */
-  scroll-behavior: smooth; /* ?? */
+  box-sizing: border-box; 
+  height: 100%;
+  width: 100%; 
+  scroll-behavior: smooth; 
+
 }
 
 *,
 *::before,
 *::after {
-  box-sizing: inherit; /* affecte legerement le positionnement du texte dans footer et header */
-  margin: 0; /* header + haut; footer - haut; espace entre messages + grand*/
-  padding: 0; /* ?? */
+  box-sizing: inherit; 
+  margin: 0; 
+  padding: 0; 
+
 }
 
 body {
-  height: 100%; /* extends window to full vertical */
+  height: 100%; 
   font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  transform: translate3d(0, 0, 0); /* ?? */
-  overflow: hidden; /* ?? */
-  font-size: 1em; /* ?? */
+  transform: translate3d(0, 0, 0); 
+  overflow: hidden; 
+  font-size: 1em; 
+
 }
 
 .wrapper {
-  position: fixed; /* ?? */
-  top: 0; /* ?? */
-  display: flex; /* display expands with content */
-  flex-direction: column; /* aligns items vertically */
-  min-width: 15em;/* ?? */
-  width: 100%; /* full viewport width instead width of content */
-  height: 100%; /* full viewport height instead of content height */
-  background: var(--background); /* ?? */
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);/* ?? */
-  transition: transform 0.5s ease; /* ?? */
+  position: fixed; 
+  top: 0; 
+  display: flex; 
+  flex-direction: column;
+  min-width: 15em;
+  width: 100%;
+  height: 100%; 
+  background: var(--background); 
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+  transition: transform 0.5s ease; 
+
 }
 
 .wrapper:first-of-type {
-  left: 0; /* ?? */
+  left: 0;
   
 }
-  /* .messages {
-    justify-content: flex-end;
-  } */  /* messages appear from the bottom; window centered at bottom; no scroll up */
+no scroll up */
 
 .wrapper:nth-of-type(2) {
-  right: 0; /* ?? */
+  right: 0; 
   
 }
-  /* .message:first-child {
-    margin-top: auto;
-  } */ /* messages from bottom; scrollable; window doesnt recenter */
+
 
 .header {
   text-align: center; /* ?? */
@@ -69,70 +70,56 @@ body {
   align-content: center; 
 }
 
-
-/* 
-.btn-close {
-  margin-left: auto;
-  height: 2em;
-  width: 2em;
-  background: transparent;
-  border: none;
-}
-
-.btn-close svg {
-  height: 1em;
-  width: 1em;
-} */
-
 .messages {
-  flex: 1; /* extends to viewport height */
-  display: flex; /* user input goes to the right; bubble pointer already on the right */
-  flex-direction: column; /* vertcally aligns content */
-  overflow-y: scroll; /* adds scrollbar otherwise text overflows & can't be reached */
-  padding: 1em 1.5em 0; /* adds space around elements  */
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24); /* ?? */
+  flex: 1; 
+  display: flex;
+  flex-direction: column; 
+  overflow-y: scroll;
+  padding: 1em 1.5em 0; 
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24); 
 }
 
 .message {
-  display: flex; /* limites message agent box to content; message input unaffected  */
-  align-items: center; /* ?? */
+  display: flex; 
+  align-items: center; 
 }
 
 .message p {
-  border-radius: 0.25em; /* ?? */
-  padding: 0.5em; /* add space between text and box */
-  margin-bottom: 1em; /*  adds white space beneath textbox */
+  border-radius: 0.25em; 
+  padding: 0.5em;
+  margin-bottom: 1em;
 }
 
 .message.agent {
-  position: relative; /* bubble pointer out of sight */
+  position: relative; 
 }
 
 .message.agent::after {
-  content: ""; /* wo: bubble pointer disappears */
-  position: absolute; /*  wo: bubble pointer positioned on right of agent box */
-  left: -15px; /* wo: no bubble pointer */
-  bottom: 1em; /* ?? */
-  border: 0 solid transparent; /* ?? */
-  border-top: 9px solid var(--text); /* wo: bubble pointer disappears */
-  border-radius: 0 20px 0; /* wo: agent bubble pointer changes shape */
-  width: 15px; /* wo: pointer not visible */
-  height: 30px; /* wo: pointer has different shape */
-  transform: rotate(145deg); /* rotates pointer */
+  content: "";
+  position: absolute; 
+  left: -15px;
+  bottom: 1em; 
+  border: 0 solid transparent; 
+  border-top: 9px solid var(--text); 
+  border-radius: 0 20px 0; 
+  width: 15px; 
+  height: 30px; 
+  transform: rotate(145deg); 
 }
 
 .message.agent p {
-  background-color: var(--text); /* sets teal color for bax background */
-  color: var(--txt-light); /* sets color of font to white */
-  border-radius: 4px; /* ?? */
+  background-color: var(--text);
+  color: var(--txt-light);
+  border-radius: 4px; 
+
 }
 
 .message.input {
-  position: relative; /* wo: pointer bubble of input disappears */
-  align-self: flex-end; /* wo: input message appears on left beneath agent; pointer remains on the right */
+  position: relative; 
+  align-self: flex-end; 
 }
 
-.message.input::after { /* cfr .message.agent::after */
+.message.input::after { 
   content: "";
   position: absolute;
   right: -15px;
@@ -148,39 +135,39 @@ body {
 
 .message.input p {
   background-color: var(--secondary);
-  text-align: right; /* ?? */
+  text-align: right; 
   color: var(--txt-light);
 }
 
 .controls {
-  padding: 0.5em; /* affects space around input area */
-  background-color: rgba(226, 224, 224, 0.781);/* modifies color of space around input area */
-  /* background-color: var(--txt-light); */
-  border: 2px solid rgba(0, 0, 0, 0.1); /* adds a darker border on top of input area */
+  padding: 0.5em; 
+  background-color: rgba(226, 224, 224, 0.781);
+  border: 2px solid rgba(0, 0, 0, 0.1); 
   
 }
 
 form {
-  display: flex; /* wo: input area & button align on the left of screen */
-  flex-direction: row; /* ?? */
-  justify-content: center; /* centers elements of flexbox */
-  margin: 0; /* ?? */
+  display: flex; 
+  flex-direction: row; 
+  justify-content: center; 
+  margin: 0; 
+
 }
 
 input[type="text"] {
-  flex: 1; /* extends input bar to available space */
-  font-size: 100%; /* ?? */
-  max-width: calc(100% - 4em);/* ?? */
+  flex: 1; 
+  font-size: 100%;
+  max-width: calc(100% - 4em);
 }
 
 input[type="submit"] {
-  font-size: 100%; /* increases size of input and button */
-  border-radius: 4px; /* wo: outer edge more square */
-  margin-left: 0.5em; /* space on left on button */
-  height: 2em; /* lenghtens height of button */
-  padding: 0 0.5em; /*  adds spacce on sides of button content */
-  background-color: var(--primary);/* button color */
-  color: var(--txt-light);/* button text color */
+  font-size: 100%; 
+  border-radius: 4px; 
+  margin-left: 0.5em; 
+  height: 2em;
+  padding: 0 0.5em; 
+  background-color: var(--primary);
+  color: var(--txt-light);
 }
 
 footer {
@@ -200,7 +187,7 @@ footer {
 }
 
 .loader {
-  display: hide;
+  display: none;
   opacity: 0.5;
   background-color: var(--main-color);
   overflow: hidden;
